version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/AdditiveManufacturing/BaseUnboltStep.rst.txt
.. vale off



:class:`BaseUnboltStep`
=======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.AdditiveManufacturing.BaseUnboltStep

   Bases: :py:obj:`object`



.. py:currentmodule:: BaseUnboltStep

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~InternalObject`
            - InternalObject property.
          * - :py:attr:`~ProcessStepType`
            - ProcessStepType property.







Property detail
---------------
.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSAMProcessSequenceStep]


   
   InternalObject property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ProcessStepType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.AMProcessStepType]


   
   ProcessStepType property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(other: Ansys.ACT.Automation.Mechanical.AdditiveManufacturing.IAMProcessStep) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on